--- a/plugins/FlickrAssets/tmpl/create_photo.tmpl
+++ b/plugins/FlickrAssets/tmpl/create_photo.tmpl
@@ -5,7 +5,7 @@
     <mt:if name="invalid_photo_url">
         <mtapp:statusmsg
             id="invalid_photo_url"
-            class="error">This photo URL doesn't seem to be valid.
+            class="error">This address doesn't seem to be a valid Flickr photo URL.
         </mtapp:statusmsg>
     </mt:if>
 
