Fixed Cancel Button on "Add Flickr Photo", Bumped Version Number, Cleaned Up LICENSE
Fixed the cancel button on the Add YouTube Video dialog in Movable
Type 5.0 and later.  Bumped version number to 1.01.  Added a couple of
lines to LICENSE.md to clarify which distribution it belongs to and
which license it is.

--- a/plugins/SuperAssetsForFlickr/tmpl/create_photo.tmpl
+++ b/plugins/SuperAssetsForFlickr/tmpl/create_photo.tmpl
@@ -126,12 +126,21 @@ TC.attachLoadEvent(function() {
             accesskey="a"
             class="primary-button"
             title="Add (a)">Add</button>
-        <button
-            onclick="closeDialog(); return false"
-            type="submit"
-            class="cancel"
-            accesskey="x"
-            title="Cancel (x)">Cancel</button>
+        <mt:If tag="Version" like="/^(5|6)/">
+            <button
+                onclick="parent.jQuery.fn.mtDialog.close(); return false"
+                type="submit"
+                class="cancel"
+                accesskey="x"
+                title="Cancel (x)">Cancel</button>
+        <mt:Else>            
+            <button
+                onclick="closeDialog(); return false"
+                type="submit"
+                class="cancel"
+                accesskey="x"
+                title="Cancel (x)">Cancel</button>
+        </mt:If>
         </div>
     </div>
 </form>
